--- a/index.html
+++ b/index.html
@@ -7,16 +7,13 @@
 
   <title>HTML</title>
   
-  <!-- HTML -->
-  
-
-  <!-- Custom Styles -->
-  <link rel="stylesheet" href="style.css">
+ <p>hello world
+ </p>
+ <em>i am coming</em>
+ 
 </head>
 
 <body>
-  <p>Nothing to see here...</p>
-  <!-- Project -->
-  <script src="main.js"></script>
+
 </body>
 </html>
